--- a/css/airliftairwaves.webflow.css
+++ b/css/airliftairwaves.webflow.css
@@ -410,7 +410,7 @@
 }
 
 .text-block-3 {
-  font-family: 'Droid Sans', sans-serif;
+  font-family: Merriweather, serif;
   font-size: 20px;
   line-height: 24px;
 }
@@ -1026,6 +1026,11 @@
     font-size: 60px;
   }
 
+  .text {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
   .fourth-section {
     height: auto;
     padding-top: 50px;
@@ -1051,10 +1056,18 @@
     justify-content: center;
   }
 
+  .text-block-2 {
+    margin-left: 0px;
+  }
+
   .sixth-section {
     height: auto;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+
+  .image-4 {
+    width: 90%;
   }
 
   .fifth-section {
@@ -1063,9 +1076,18 @@
     padding-bottom: 50px;
   }
 
+  .image-6 {
+    width: 90%;
+  }
+
   .headin-1 {
     font-size: 34px;
     line-height: 130%;
+  }
+
+  .text-block-3 {
+    font-family: Merriweather, serif;
+    text-align: center;
   }
 
   .menu-button {
@@ -1077,9 +1099,13 @@
     padding-bottom: 25px;
   }
 
+  .heading {
+    text-align: center;
+  }
+
   .circle-content-wrapper {
     height: 500px;
-    padding-top: 90px;
+    padding-top: 140px;
     padding-bottom: 90px;
   }
 
@@ -1098,6 +1124,15 @@
 
   .donate {
     font-size: 60px;
+  }
+
+  .c-code {
+    font-size: 12px;
+  }
+
+  .c-sub-section {
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
   .c-title-2 {
