--- a/css/airliftairwaves.webflow.css
+++ b/css/airliftairwaves.webflow.css
@@ -438,7 +438,7 @@
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  background-color: #990a19;
+  background-color: #11068e;
 }
 
 .sidebar-navlink {
