--- a/css/airliftairwaves.webflow.css
+++ b/css/airliftairwaves.webflow.css
@@ -351,7 +351,6 @@
   line-height: 130%;
   text-decoration: none;
   cursor: pointer;
-  background-color: #1200d3;
 }
 
 .card-button:hover {
@@ -439,7 +438,7 @@
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  background-color: #11068e;
+  background-color: #0f00b8;
 }
 
 .sidebar-navlink {
@@ -907,6 +906,63 @@
   font-size: 25px;
 }
 
+.gallery {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.centered-container {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  text-align: center;
+}
+
+.gallery-grid-container {
+  display: -ms-grid;
+  display: grid;
+  margin-top: 40px;
+  -ms-grid-row-align: center;
+  align-self: center;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  grid-template-areas: ".";
+  -ms-grid-columns: 1fr 20px 1fr 20px 1fr 20px 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: auto 20px auto;
+  grid-template-rows: auto auto;
+}
+
+.gallery-lightbox {
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery-thumbnail {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 50%;
+  object-position: 50% 50%;
+}
+
+.heading-4 {
+  font-family: Merriweather, serif;
+  color: #fff;
+}
+
+.paragraph-2 {
+  color: #fff;
+}
+
+.link-2 {
+  color: #fff;
+}
+
 @media screen and (max-width: 991px) {
   .navbar-container {
     grid-column-gap: 0px;
@@ -924,6 +980,13 @@
 
   .donate {
     font-size: 90px;
+  }
+
+  .gallery-grid-container {
+    -webkit-align-self: stretch;
+    -ms-flex-item-align: stretch;
+    -ms-grid-row-align: stretch;
+    align-self: stretch;
   }
 }
 
@@ -1010,6 +1073,18 @@
     font-size: 16px;
     line-height: 28px;
   }
+
+  .gallery {
+    padding: 40px 20px;
+  }
+
+  .gallery-grid-container {
+    max-width: none;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1091,6 +1166,10 @@
     text-align: center;
   }
 
+  .sidebar-menu {
+    background-color: #202023;
+  }
+
   .menu-button {
     opacity: 1;
   }
@@ -1106,7 +1185,7 @@
 
   .circle-content-wrapper {
     height: 500px;
-    padding-top: 140px;
+    padding-top: 160px;
     padding-bottom: 90px;
   }
 
@@ -1139,29 +1218,19 @@
   .c-title-2 {
     line-height: 36px;
   }
-}
 
-#w-node-d79bc69f-574e-932f-d409-0d9e29655f37-bddf2dc5 {
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-}
+  .centered-container {
+    text-align: left;
+  }
 
-#w-node-da678f6f-32d8-d365-df81-6720deed8908-bddf2dc5 {
-  -ms-grid-column-align: center;
-  justify-self: center;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-}
-
-#w-node-_2810f166-8cd6-a511-b913-84b8cecb2ebb-bddf2dc5 {
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
+  .gallery-grid-container {
+    margin-right: 0px;
+    margin-left: 0px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
+  }
 }
 
 #w-node-_189a08ab-a117-eb4d-81e6-16213281997e-bddf2dc5 {
@@ -1177,14 +1246,14 @@
   align-self: center;
 }
 
-#w-node-d79bc69f-574e-932f-d409-0d9e29655f37-f8b26988 {
+#w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e1-56ef36df {
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
 }
 
-#w-node-da678f6f-32d8-d365-df81-6720deed8908-f8b26988 {
+#w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e6-56ef36df {
   -ms-grid-column-align: center;
   justify-self: center;
   -webkit-align-self: center;
@@ -1193,20 +1262,59 @@
   align-self: center;
 }
 
-#w-node-_2810f166-8cd6-a511-b913-84b8cecb2ebb-f8b26988 {
+#w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36f0-56ef36df {
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
 }
 
-@media screen and (max-width: 991px) {
-  #w-node-_2810f166-8cd6-a511-b913-84b8cecb2ebb-bddf2dc5 {
-    -ms-grid-column-align: center;
-    justify-self: center;
-  }
+#w-node-_518a5b3a-9c60-5f99-bfd1-ddc25a11e923-923e6f1f {
+  -ms-grid-row: span 2;
+  grid-row-start: span 2;
+  -ms-grid-row-span: 2;
+  grid-row-end: span 2;
+  -ms-grid-column: span 2;
+  grid-column-start: span 2;
+  -ms-grid-column-span: 2;
+  grid-column-end: span 2;
+}
 
-  #w-node-_2810f166-8cd6-a511-b913-84b8cecb2ebb-f8b26988 {
+#w-node-a61256b3-a49c-6287-3b6c-189903fd8a0c-923e6f1f {
+  -ms-grid-row: span 2;
+  grid-row-start: span 2;
+  -ms-grid-row-span: 2;
+  grid-row-end: span 2;
+  -ms-grid-column: span 2;
+  grid-column-start: span 2;
+  -ms-grid-column-span: 2;
+  grid-column-end: span 2;
+}
+
+#w-node-_86d6a610-2ef6-8f0c-da0b-c06e5f83e5ef-923e6f1f {
+  -ms-grid-row: 1;
+  grid-row-start: 1;
+  -ms-grid-row-span: 2;
+  grid-row-end: 3;
+  -ms-grid-column: 2;
+  grid-column-start: 2;
+  -ms-grid-column-span: 2;
+  grid-column-end: 4;
+}
+
+#w-node-a0dc9859-30bb-cd4a-62d6-edad7e389576-923e6f1f {
+  -ms-grid-row: 1;
+  grid-row-start: 1;
+  -ms-grid-row-span: 2;
+  grid-row-end: 3;
+  -ms-grid-column: 2;
+  grid-column-start: 2;
+  -ms-grid-column-span: 2;
+  grid-column-end: 4;
+}
+
+@media screen and (max-width: 991px) {
+  #w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36f0-56ef36df {
     -ms-grid-column-align: center;
     justify-self: center;
   }
@@ -1231,5 +1339,49 @@
     grid-column-start: span 2;
     -ms-grid-column-span: 2;
     grid-column-end: span 2;
+  }
+
+  #w-node-_518a5b3a-9c60-5f99-bfd1-ddc25a11e923-923e6f1f {
+    -ms-grid-row: span 1;
+    grid-row-start: span 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: span 1;
+    -ms-grid-column: span 1;
+    grid-column-start: span 1;
+    -ms-grid-column-span: 1;
+    grid-column-end: span 1;
+  }
+
+  #w-node-a61256b3-a49c-6287-3b6c-189903fd8a0c-923e6f1f {
+    -ms-grid-row: span 1;
+    grid-row-start: span 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: span 1;
+    -ms-grid-column: span 1;
+    grid-column-start: span 1;
+    -ms-grid-column-span: 1;
+    grid-column-end: span 1;
+  }
+
+  #w-node-_86d6a610-2ef6-8f0c-da0b-c06e5f83e5ef-923e6f1f {
+    -ms-grid-row: span 1;
+    grid-row-start: span 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: span 1;
+    -ms-grid-column: span 1;
+    grid-column-start: span 1;
+    -ms-grid-column-span: 1;
+    grid-column-end: span 1;
+  }
+
+  #w-node-a0dc9859-30bb-cd4a-62d6-edad7e389576-923e6f1f {
+    -ms-grid-row: span 1;
+    grid-row-start: span 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: span 1;
+    -ms-grid-column: span 1;
+    grid-column-start: span 1;
+    -ms-grid-column-span: 1;
+    grid-column-end: span 1;
   }
 }
