--- a/css/airliftairwaves.webflow.css
+++ b/css/airliftairwaves.webflow.css
@@ -238,6 +238,7 @@
 }
 
 .div-block-4 {
+  margin-bottom: 140px;
   padding-top: 91px;
   -webkit-transition: all 400ms ease;
   transition: all 400ms ease;
@@ -252,6 +253,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  margin-top: 220px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
